--- a/DespidoTexto/src/DespidoFormulario/Despido.form
+++ b/DespidoTexto/src/DespidoFormulario/Despido.form
@@ -487,7 +487,7 @@
       <Properties>
         <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/iconsets/Agelso.jpg"/>
+          <Image iconType="3" name="/iconsets/Agelso_blue.jpg"/>
         </Property>
         <Property name="toolTipText" type="java.lang.String" value=""/>
       </Properties>
